# summary_publication

./: README.md
franco_project/: pyproject.toml  requirements.txt
franco_project/astrea/api/login/: __init__.py
franco_project/astrea/api/publication/: clippings.py
franco_project/front/: app.py
franco_project/front/db/: publication.py
franco_project/front/gemini/credencials/: __init__.py
franco_project/front/pages/: manager.py  prompt.py
franco_project/gemini/credencials/: __init__.py
franco_project/src/agents/sender_email/: __init__.py
franco_project/src/agents/summarizer/: __init__.py
front_adv_erp/: app.py  pyproject.toml
front_adv_erp/page/: home.py  manager_report.py  report_lawsuits.py
summary_publication/: .gitignore  Dockerfile  Makefile  main.py
summary_publication/astrea/api/exceptions/: login.py
summary_publication/db/: publication.py
summary_publication/front/db/: __init__.py  cache.py  prompt.py
summary_publication/front/model/: publication.py  system.py
summary_publication/gpt/: __init__.py
summary_publication/validation/requests/: __init__.py
