[tool.poetry]
name = "front-adv-erp"
version = "0.1.0"
description = ""
authors = ["Alexandre Ito <shiguemialexandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
